force-app/main/default/objects/Checklist__c/Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <label>Nome de Checklist</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>