force-app/main/default/objects/Checklist__c/fields/Done__c.field-meta.xml
<CustomField>
    <fullName>Done__c</fullName>
    <label>Concluído</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>