force-app/main/default/objects/Checklist__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescisão</label>
    <referenceTo>Termination__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>