force-app/main/default/objects/Checklist__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHECK_TRANSFER_LETTER</fullName>
            </value>
            <value>
                <fullName>INSPECTION_SCHEDULED</fullName>
            </value>
            <value>
                <fullName>INSPECTION_SYNCED</fullName>
            </value>
            <value>
                <fullName>REPAIR_BUDGET_APPROVAL_NEEDED_TENANT</fullName>
            </value>
            <value>
                <fullName>CONTESTATION_REVIEW_NEEDED_5A</fullName>
            </value>
            <value>
                <fullName>INSPECTION_REVIEW_NEEDED_5A</fullName>
            </value>
            <value>
                <fullName>INSPECTION_REVIEW_NEEDED_TENANT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>