force-app/main/default/objects/Checklist__c/validationRules/RequiredTermination.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredTermination</fullName>
    <active>true</active>
    <description>Termination__c is mandatory</description>
    <errorConditionFormula>ISBLANK(Termination__c)</errorConditionFormula>
    <errorMessage>Error: Termination__c is blank</errorMessage>
</ValidationRule>