force-app/main/default/objects/Checklist__c/validationRules/RequiredType.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredType</fullName>
    <active>true</active>
    <description>Type__c is mandatory</description>
    <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorMessage>Error: Type__c is blank</errorMessage>
</ValidationRule>